# nvim-treesitter

./: .editorconfig  .emmyrc.json  .gitattributes  .gitignore  .luacheckrc  .luarc.json  .stylua.toml  .travis.yml  .tsqueryrc.json  CONTRIBUTING.md  Makefile  README.md  SUPPORTED_LANGUAGES.md  TESTING.md  TODO.md  dank.scala  lockfile.json  nvim-treesitter-scm-1.rockspec  nvim_treesitter-scm-1.rockspec  parser.json
.github/: FUNDING.yml  dependabot.yml  mergify.yml  pull_request_template.md
.metals/: metals.h2.db
autoload/: nvim_treesitter.vim
contrib/: nvim-treesitter-luarocks.template
doc/: fittencode.nvim.txt  nvim-treesitter.txt  tags
ftdetect/: brewfile.vim  dot.vim  eex.vim  elixir.vim  elvish.vim  fennel.vim  fish.vim  glimmer.vim  glsl.vim  gomod.vim  graphql.vim  hcl.vim  hocon.vim  jsonc.vim  julia.vim  livemd.vim  ninja.vim  pug.vim  query.vim  rasi.vim  re2c.vim  rescript.vim  vala.vim  wgsl.vim  zig.vim
lua/: nvim-treesitter.lua
plugin/: filetypes.lua  nvim-treesitter.lua  nvim-treesitter.vim  query_predicates.lua
scripts/: abi_version.sh  check-parsers.lua  check-queries.lua  ci-install-macos-14.sh  ci-install-macos-latest.sh  ci-install-ubuntu-latest.sh  ci-install-windows-2022.sh  ci-install-windows-latest.cmd  ci-install-windows-latest.sh  ci-install.sh  compile_parsers.makefile  convert-lockfile.lua  format-queries.lua  install-parsers.lua  minimal_init.lua  pre-push  run_tests.sh  style-check.sh  update-lockfile.lua  (+4 more)
tests/indent/meson/: cond.meson  dict.meson  func.meson  list.meson  loop.meson  meson.build  method.meson  ternary.meson
(+2381 files in other folders)
